--- a/jobboard_backend/authentication/src/main/resources/application.properties
+++ b/jobboard_backend/authentication/src/main/resources/application.properties
@@ -19,3 +19,13 @@ spring.mail.username=maissak367@gmail.com
 spring.mail.password=isjw rlos akjw pijb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.security.oauth2.client.registration.google.client-id=1063839859750-8mhuftg0m4k8o3ao0u9r79b5uu9j1s0s.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+
+
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth?prompt=consent&access_type=offline
