Mise à jour du projet jobboardFront

--- a/JobboardFront/angular.json
+++ b/JobboardFront/angular.json
@@ -21,14 +21,13 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
             ],
+
             "scripts": []
           },
           "configurations": {
@@ -92,5 +91,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "52254f35-9c11-4330-850c-b40419dacb34"
   }
 }
