--- a/JobboardFront/angular.json
+++ b/JobboardFront/angular.json
@@ -21,11 +21,16 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+
+                {
+                  "glob": "**/*",
+                  "input": "public"
+                }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
 
             "scripts": []
