--- a/JobboardFront/package.json
+++ b/JobboardFront/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-cool/loading-button": "^18.0.1",
     "@angular/animations": "^19.2.1",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
@@ -21,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "angular-oauth2-oidc": "^19.0.0",
     "ngx-toastr": "^19.0.0",
+    "remove-accents": "^0.5.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
