--- a/jobboard_backend/admin/src/main/resources/application.properties
+++ b/jobboard_backend/admin/src/main/resources/application.properties
@@ -1,13 +1,8 @@
 spring.application.name=admin
-spring.datasource.url=jdbc:postgresql://localhost:5431/jobboard
-spring.datasource.username=postgres
-spring.datasource.password=maissa123456
-spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=8082
 
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.flyway.enabled=false
-spring.docker.compose.enabled=false
-spring.jpa.properties.hibernate.format_sql=true
+
+
+
+
