--- a/JobboardFront/angular.json
+++ b/JobboardFront/angular.json
@@ -28,11 +28,11 @@
                 }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
-
             "scripts": []
           },
           "configurations": {
@@ -89,6 +89,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
