--- a/JobboardFront/package.json
+++ b/JobboardFront/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@angular-cool/loading-button": "^18.0.1",
     "@angular/animations": "^19.2.1",
+    "@angular/cdk": "~19.2.8",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "~19.2.8",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
