--- a/JobboardFront/package.json
+++ b/JobboardFront/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "angular-oauth2-oidc": "^19.0.0",
+    "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
     "remove-accents": "^0.5.0",
     "rxjs": "~7.8.0",
