--- a/JobboardFront/angular.json
+++ b/JobboardFront/angular.json
@@ -31,6 +31,7 @@
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/remixicon/fonts/remixicon.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
