--- a/JobboardFront/package.json
+++ b/JobboardFront/package.json
@@ -23,8 +23,11 @@
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "angular-oauth2-oidc": "^19.0.0",
+    "chart.js": "^4.4.9",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^4.1.1",
     "ngx-toastr": "^19.0.0",
+    "remixicon": "^4.6.0",
     "remove-accents": "^0.5.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
