--- a/jobboard_backend/candidat/compose.yaml
+++ b/jobboard_backend/candidat/compose.yaml
@@ -1,9 +1,11 @@
+version: '3.8'
 services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=candidat'
+      - 'POSTGRES_PASSWORD=maissa123456'
+      - 'POSTGRES_USER=postgres'
     ports:
-      - '5432'
+      - '5431'
+
