--- a/jobboard_backend/candidat/src/main/resources/application.properties
+++ b/jobboard_backend/candidat/src/main/resources/application.properties
@@ -16,3 +16,14 @@ spring.docker.compose.enabled=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+#mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=maissak367@gmail.com
+spring.mail.password=isjw rlos akjw pijb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
